<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.EVC3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_exercise_alimentacion"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.EVC3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_exercise_Rutinas"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.EVC3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_exercise_recomendaciones"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.EVC3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_exercise_Recordatorio"
        />

    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?attr/colorPrimary"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.EVC3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_exercise_account"
        />
</merge>